--- a/app/assets/stylesheets/modules/_exhibit_now.scss
+++ b/app/assets/stylesheets/modules/_exhibit_now.scss
@@ -10,8 +10,9 @@
 .mypage__user__tab__content {
   &__now {
     display: block;
+    border-bottom: 1 px solid #eee;
     li {
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid gray;
       border: 0;
       position: relative;
       @include clearfix;
@@ -19,6 +20,7 @@
         display: block;
         padding: 16px;
         color: #333;
+        border-bottom: 1px solid #eee;
         text-decoration: none;
         &__figure {
           position: relative;
@@ -36,8 +38,6 @@
             left: 0;
             z-index: 1;
             width: 100%;
-            height: 60px;
-            width: 60px;
           }
         }
         &__area {
@@ -57,6 +57,7 @@
             &__reaction {
               vertical-align: 2px;
               margin: 0 6px 0 0;
+              color: #888;
               i {
                 vertical-align: middle;
                 color: #ccc;
