--- a/app/assets/stylesheets/modules/_items-new.scss
+++ b/app/assets/stylesheets/modules/_items-new.scss
@@ -31,38 +31,55 @@
             display: flex;
             #preview {
               display: flex;
+              .img_view {
+              @include clearfix;
+              .btn {
+                text-align: center;
+                float: left;
+                margin-left: 10px;
+                margin-top: 5px;
+                padding: 5px;
+                color: #0083ef;
+                cursor: pointer;
+              }
+              }
             }
             .dropzone-area {
               width: 620px;
+              // position: relative; ////////
               &__have-item {
                 float: left;
                 display: block;
               }
-            }
-            .input_area {
-              float: center;
-              width: 100%;
-              position: relative;
-              min-height: 150px;
-              background: #f5f5f5;
-              border: 1px dashed #ccc;
-              font-size: 0;
-              text-align: center;
-              cursor: pointer;
-              .upload-image {
-                opacity: 0;
-              }
-              pre {
-                position: absolute;
-                top: 50%;
-                left: 16px;
-                right: 16px;
-                text-align: center;
-                font-size: 14px;
-                line-height: 1.5;
-                pointer-events: none;
-                white-space: pre-wrap;
-                word-wrap: break-word;
+
+              .input_area {
+                width: 100%;
+                position: relative;
+                min-height: 150px;
+                background: #f5f5f5;
+                border: 1px dashed #ccc;
+                font-size: 0;                
+                cursor: pointer;
+                .upload-image {
+                  opacity: 0;
+                  // position: relative;
+                  // position: absolute;
+                  // width: 100%;
+                  // height: 100%;
+                  // cursor: pointer;
+                }
+                pre {
+                  position: absolute;
+                  top: 50%;
+                  left: 16px;
+                  right: 16px;
+                  text-align: center;
+                  font-size: 14px;
+                  line-height: 1.5;
+                  pointer-events: none;
+                  white-space: pre-wrap;
+                  word-wrap: break-word;
+                }
               }
             }
           }
