--- a/app/views/cards/create.html.haml
+++ b/app/views/cards/create.html.haml
@@ -7,8 +7,6 @@
         .login-form-inner
           .l-single-content
             %p ありがとうございます。会員登録完了しました。
-
-
-              
-
+            =link_to root_path,class: "item-buy-btn" do
+              TOPへ戻る
     = render partial: "shared/sub_footer"
