--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,5 +18,6 @@
 
     %footer
       = render "/shared/footer"
-    %global-footer
-      = render "/shared/sell-btn" 
+    -if controller.controller_name != "signup" && "devise" && "address" || (controller.controller_name == "items" && controller.action_name != "new") && ( controller.controller_name =="card" && controller.action_name != "new" && "create") || (controller.controller_name == "user" && controller.action_name != "signup")
+      %global-footer
+        = render "/shared/sell-btn" 
