--- a/app/views/layouts/sub_application.html.haml
+++ b/app/views/layouts/sub_application.html.haml
@@ -8,7 +8,9 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %header
-      = render partial: "shared/sub_header"
-      = yield 
-      = render partial: "shared/sub_footer"
+    = render partial: "shared/sub_header"
+    = yield 
+    = render partial: "shared/sub_footer"
+  -if controller.controller_name != "signup" && "devise" && "address" || (controller.controller_name == "items" && controller.action_name != "new") && ( controller.controller_name =="card" && controller.action_name != "new" && "create") || (controller.controller_name == "user" && controller.action_name != "signup")
+    %global-footer
+      = render "/shared/sell-btn" 
