ルーティングの見直し

--- a/app/assets/stylesheets/modules/_items-show.scss
+++ b/app/assets/stylesheets/modules/_items-show.scss
@@ -353,6 +353,22 @@ i.icon-good{
   -webkit-transition: all ease-out .3s;
   transition: all ease-out .3s;
 }
+.buyed_message {
+  width: 780px;
+  margin: auto;
+  font-size: 24px;
+  line-height: 60px;
+  display: block;
+  margin-top: 16px;
+  background: #ccc;
+  font-size: 14px;
+  color: #888;
+  line-height: 56px;
+  text-align: center;
+  font-weight: 600;
+  -webkit-transition: all ease-out .3s;
+  transition: all ease-out .3s;
+}
 .item-delete-btn{
   width: 780px;
   margin: auto;
