--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -2,7 +2,7 @@
   %main.single-main
     %section.l-single-container
       %h2.l-single-head 商品の情報を入力
-      = form_for @item, url: user_item_path(current_user), html: {class: 'edit_item', id: 'edit_item'} do |f|
+      = form_for @item, html: {class: 'edit_item', id: 'edit_item'} do |f|
         .sell-box
           %h3.uploud-header 出品画像
           %span.form-require 必須
@@ -138,6 +138,6 @@
               = link_to '加盟店規約','/jp/seller_terms/'
               に同意したことになります。
             = f.submit '変更する', class: 'btn-red'
-            = link_to '#' do
-              もどる
-            = f.submit 'もどる', class: 'btn-grey'
+            = link_to root_path, class: "btn-grey" do
+              トップページに戻る
+            
