--- a/app/views/shared/_mypage-side-manu.html.haml
+++ b/app/views/shared/_mypage-side-manu.html.haml
@@ -14,7 +14,7 @@
           いいね！一覧
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        = link_to new_user_item_path(current_user), class: "mypage__side__nav__list" do
+        = link_to new_item_path(current_user), class: "mypage__side__nav__list" do
           出品する
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
