--- a/app/views/shared/_sell-btn.html.haml
+++ b/app/views/shared/_sell-btn.html.haml
@@ -1,4 +1,4 @@
-= link_to '#',class:'sell-btn' do
+= link_to new_item_path,class:'sell-btn' do
   .sell-btn__word 出品
   = fa_icon 'camera',class:'sell-btn__icon'
   
