--- a/app/views/shared/_sub_header.html.haml
+++ b/app/views/shared/_sub_header.html.haml
@@ -1,3 +1,4 @@
 %header.single-header
   %h1
-    %img{:alt => "mercari", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
+    = link_to root_path do
+      %img{:alt => "mercari", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
