出品出品した商品ページにパンくずを追加

--- a/app/views/users/exhibit_list.html.haml
+++ b/app/views/users/exhibit_list.html.haml
@@ -1,3 +1,6 @@
+
+- breadcrumb :exhibited
+= render 'shared/breadcrumbs'
 %main.main__contents
   .main__contents__contents
     = render 'shared/exhibit-now'
