--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,71 +3,71 @@
     %h2.menu-title メルカリについて
     %ul.menu
       %li.menu__list
-        = link_to '会社概要（運営会社）', 'https://about.mercari.com/',class:'menu__list__link'
+        = link_to '会社概要（運営会社）', '#',class:'menu__list__link'
       %li.menu__list
-        = link_to '採用情報', '/jp/jobs/',class:'menu__list__link'
+        = link_to '採用情報', '#',class:'menu__list__link'
       %li.menu__list
-        = link_to 'プレスリリース','https://about.mercari.com/press/news/',class:'menu__list__link'
+        = link_to 'プレスリリース','#',class:'menu__list__link'
       %li.menu__list
-        = link_to '公式ブログ','https://jp-news.mercari.com/',class:'menu__list__link',target:'_blank'
+        = link_to '公式ブログ','#',class:'menu__list__link',target:'_blank'
       %li.menu__list
-        = link_to 'メルカリロゴ利用ガイドライン','/jp/logo-guidelines/',class:'menu__list__link'
+        = link_to 'メルカリロゴ利用ガイドライン','#',class:'menu__list__link'
       -# うまくできない、直す！！
       .menu__link
-        = link_to 'https://twitter.com/mercari_jp',class:'menu__link__path' do
+        = link_to '#',class:'menu__link__path' do
           = fa_icon 'twitter',class:'icon'
       .menu__link
-        = link_to 'https://www.facebook.com/mercarijp',class:'menu__link__path' do
+        = link_to '#',class:'menu__link__path' do
           = fa_icon 'facebook-square',class:'icon'
   .content
     %h2.menu-title ヘルプ＆ガイド
     %ul.menu
       %li.menu__list
-        = link_to 'メルカリガイド','/jp/help_center/',class:'menu__list__link'
+        = link_to 'メルカリガイド','#',class:'menu__list__link'
       %li.menu__list
-        = link_to 'らくらくメルカリ便','/jp/rakuraku-mercari/',class:'menu__list__link'
+        = link_to 'らくらくメルカリ便','#',class:'menu__list__link'
       %li.menu__list
-        = link_to 'ゆうゆうメルカリ便','/jp/yuyu-mercari/',class:'menu__list__link' 
+        = link_to 'ゆうゆうメルカリ便','#',class:'menu__list__link' 
       %li.menu__list
-        = link_to '大型メルカリ便','/jp/rakuraku-ogata/',class:'menu__list__link' 
+        = link_to '大型メルカリ便','#',class:'menu__list__link' 
       %li.menu__list
-        = link_to '車体取引ガイド','/jp/guide/car/',class:'menu__list__link' 
+        = link_to '車体取引ガイド','#',class:'menu__list__link' 
       %li.menu__list
-        = link_to 'メルカリあんしん・あんぜん宣言！','/jp/authenticity/',class:'menu__list__link' ,target:'_blank'
+        = link_to 'メルカリあんしん・あんぜん宣言！','#',class:'menu__list__link' ,target:'_blank'
       %li.menu__list
-        = link_to '偽ブランド品撲滅への取り組み','/jp/authenticity/',class:'menu__list__link'
+        = link_to '偽ブランド品撲滅への取り組み','#',class:'menu__list__link'
       %li.menu__list
-        = link_to 'メルカリボックス','/jp/box/',class:'menu__list__link' 
+        = link_to 'メルカリボックス','#',class:'menu__list__link' 
 
   .content-midium
     %h2.menu-title プライバシーと利用規約
     .text-area
       %ul.menu
         %li.menu__list
-          = link_to 'プライバシーポリシー','/jp/privacy/',class:'menu__list__link'
+          = link_to 'プライバシーポリシー','#',class:'menu__list__link'
         %li.menu__list
-          = link_to 'メルカリ利用規約','/jp/tos/',class:'menu__list__link'
+          = link_to 'メルカリ利用規約','#',class:'menu__list__link'
         %li.menu__list
-          = link_to 'あんしんスマホサポート制度に関する利用特約','/jp/tos_smartphone_support/',class:'menu__list__link'
+          = link_to 'あんしんスマホサポート制度に関する利用特約','#',class:'menu__list__link'
         %li.menu__list
-          = link_to 'コンプライアンスポリシー','/jp/compliance/',class:'menu__list__link'
+          = link_to 'コンプライアンスポリシー','#',class:'menu__list__link'
     .text-area
       %ul.menu
         %li.menu__list
-          = link_to '個人データの安全管理に係る基本方針','/jp/data_security/',class:'menu__list__link'
+          = link_to '個人データの安全管理に係る基本方針','#',class:'menu__list__link'
         %li.menu__list
-          = link_to '特定商取引に関する表記','/jp/tokutei/',class:'menu__list__link'
+          = link_to '特定商取引に関する表記','#',class:'menu__list__link'
         %li.menu__list
-          = link_to '資金決済法に基づく表示','/jp/shikin_kessai/',class:'menu__list__link' 
+          = link_to '資金決済法に基づく表示','#',class:'menu__list__link' 
         %li.menu__list
-          = link_to '法令順守と犯罪抑止のために','https://about.mercari.com/csr/safety/',class:'menu__list__link'
+          = link_to '法令順守と犯罪抑止のために','#',class:'menu__list__link'
           
   .content-right
     %h2.menu-title 国
     %ul.menu
       %li.menu__list
-        = link_to '日本','/jp/',class:'menu__list__countory'
+        = link_to '日本','#',class:'menu__list__countory'
         = link_to 'United States','/',class:'menu__list__countory'
 .content-bottom
-  = link_to image_tag('https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?2482339763',class:'brand-logo__image'),'https://www.mercari.com/jp/',class:'brand-logo'
+  = link_to image_tag('https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?2482339763',class:'brand-logo__image'),'#',class:'brand-logo'
   %span.copyright © 2019 Mercari
