詳細画面等修正

--- a/app/assets/stylesheets/modules/_items-show.scss
+++ b/app/assets/stylesheets/modules/_items-show.scss
@@ -111,34 +111,34 @@
     overflow: hidden;
     display: inline-block;
 
-    .owl-dot-inner{
-      .is-higher-height{
+    // .owl-dot-inner{
+    //   .is-higher-height{
 
-      }
-    }
+    //   }
+    // }
   }
   
-  .owl-dot.active{
-    .owl-dot-inner{
-      .is-higher-height{
+  // .owl-dot.active{
+  //   .owl-dot-inner{
+  //     .is-higher-height{
 
-      }
-    }
-  }
-  .owl-dot{
-    .owl-dot-inner{
-      .is-higher-height{
+  //     }
+  //   }
+  // }
+  // .owl-dot{
+  //   .owl-dot-inner{
+  //     .is-higher-height{
 
-      }
-    }
-  }
-  .owl-dot{
-    .owl-dot-inner{
-      .is-higher-height{
+  //     }
+  //   }
+  // }
+  // .owl-dot{
+  //   .owl-dot-inner{
+  //     .is-higher-height{
 
-      }
-    }
-  }
+  //     }
+  //   }
+  // }
 }
 
 .item-detail-table{
