--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -99,13 +99,21 @@
         = "¥#{@item.price}"
       %span.item-tax (税込)
       %span.item-shipping-fee 送料込み
-    .text-center
     - if @item.user_id != current_user.id
-      .sales-point-message
-        P1,000 をお持ちです
+      .text-center
+
+        - if @user.creditcard_id != nil
+          .sales-point-message
+            P1,000 をお持ちです
         .sales-point-message:after
-      =link_to buy_user_item_path(current_user, @item),class: "item-buy-btn" do
-        購入画面に進む
+        - if @creditcard != nil
+          =link_to buy_user_item_path(current_user, @item),class: "item-buy-btn" do
+            購入画面に進む
+        - else
+          =link_to item_path(@item),class: "item-buy-btn" do
+            %p 購入できません
+          %p.error_message
+            ※クレジットカードの登録をしてください
 
 
     .item-description.f14
@@ -134,7 +142,7 @@
             %span あんしん・あんぜんへの取り組み
   - if @item.buyer_id != nil
     .buyed_message
-      購入されました
+      売り切れました
   - else
     - if @item.user_id == current_user.id
       = link_to edit_item_path,method: :get,class: "item-delete-btn" do
