誤字を修正

--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -34,4 +34,4 @@
               = f.text_field :building, placeholder: "例 ）柳ビル103" 
               
             .actions.btn-next
-              = f.submit "次へ住む", class: "btn-default btn-red"
+              = f.submit "次へ進む", class: "btn-default btn-red"
