--- a/app/assets/stylesheets/modules/_mypage_user_image.scss
+++ b/app/assets/stylesheets/modules/_mypage_user_image.scss
@@ -2,7 +2,7 @@
   height: 200px;
   position: relative;
   padding: 20px;
-  background: url(user-bg.jpg);
+  background: url(https://msp.c.yimg.jp/yjimage?q=xogHhiMXyLF912UZcjJTIEMHugLtZCm6Ld4tBBdAjC3ofbvFMjLy5GLCB0sT69CWHLn0EPH64BHxmFNeYe12sTP9nbxWX7j.u9jjp077kSBkv8hA8CLxueSwR_smlmMJLe1cv5VWXZvVJvAwrw--&sig=138vjte96&x=259&y=194);
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
