--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -5,6 +5,7 @@
         %h2.l-single-head.registration 住所入力
         .l-single-content
           = form_for [@address], url: user_addresses_path, method: :post, html: {class: 'l-single-inner'} do |f|
+            = render 'layouts/error_messages', model: f.object
             .field
               = f.label :郵便番号
               %spna.form-require 必須
