ビューの修正

--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -10,7 +10,7 @@
               = f.label :郵便番号
               %spna.form-require 必須
               %br/
-              = f.text_field :postcode, placeholder: "例 ）1234567" 
+              = f.text_field :postcode, placeholder: "例 ）123-4567" 
             .field
               = f.label :都道府県
               %spna.form-require 必須
