説明を名前に変更

--- a/app/views/shared/_content.html.haml
+++ b/app/views/shared/_content.html.haml
@@ -3,7 +3,7 @@
     %figure.figure
       %figcaption
         %span
-          = item.description
+          = item.name
       .tag
         %span{"aria-label" => "Price"} ¥ #{item.price}
         = image_tag "#{item.pictures.last.name}", class: 'tag__image'
