購入画面への遷移エラー解消

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,4 +25,5 @@
 @import "modules/item-edit";
 @import "modules/flash";
 @import "modules/breadcrumbs";
+@import "modules/purchase_confirmation";
 
