--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -48,7 +48,7 @@
                   = f.select :size, Item.sizes.keys, {:prompt => "---"}
             .form-group
               = f.label :ブランド
-              %span.form-require 任意
+              %span.form-require.form-require-gray 任意
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
