ビューの修正

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -12,6 +12,10 @@
     line-height: 1;
     margin: 0;
 
+    span {
+      color: #333;
+    }
+
     .header-top {
       height:50%;
       display: -webkit-box;
